[package]
name = "drake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ignore = "0.4.20"
patricia_tree = "0.6.3"
tree-sitter = "0.20.4"
tree-sitter-swift = "=0.3.6"
crossbeam = "0.8.2"
