[package]
name = "drake"
version = "0.2.0"
description = "A tree-sitter based codebase dependency explorer"
repository = "https://github.com/charypar/drake"
documentation = "https://docs.rs/drake"
readme = "README.md"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ignore = "0.4.20"
patricia_tree = "0.6.3"
tree-sitter = "0.20.4"
tree-sitter-swift = "=0.3.6"
crossbeam = "0.8.2"
num_cpus = "1.16.0"
clap = { version = "4.4.8", features = ["derive"] }
